<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StageSelect">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/BattleField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/battlefieldbtn"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageButton
                    android:id="@+id/FinalDestination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"

                    android:scaleType="fitCenter"
                    android:src="@drawable/finaldestinationbtn" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageButton
                    android:id="@+id/KalosPokemonStadium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kalosbtn" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageButton
                    android:id="@+id/LylatCruise"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/lylatbtn" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageButton
                    android:id="@+id/PokemonStadium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pokemonbtn" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageButton
                    android:id="@+id/PokemonStadium2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pokemontwobtn" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageButton
                    android:id="@+id/Smashville"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/smashvillebtn" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageButton
                    android:id="@+id/TownAndCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/towncitybtn"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/UnovaPokemonLeague"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/unovabtn" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageButton
                    android:id="@+id/YoshiIsland"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/islandbtn" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/YoshisStory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/storybtn" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>