...
            android:src="@drawable/menu_button_event"
            android:foreground="?android:attr/selectableItemBackground"

            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characters"
            app:layout_constraintBottom_toTopOf="@id/stages"
            android:layout_centerHorizontal="true"
            />

        <ImageButton
            android:id="@+id/stages"
            android:layout_width="225dp"
...
